# checkpointing

./: LICENCE  README.md  pyproject.toml
examples/example1/: cpl.yml  ex1.py
examples/example2/: cpl.yml  ex2.job  ex2.py  model_checkpoint.pt  slurm-63816.out  slurm-63821.out  slurm-63823.out
examples/example3/: ex3.job  ex3.py
examples/example4/: cpl.yml  ex4.job  ex4.py  prio.job
examples/example5/: cpl.yml  ex5.job  ex5.out.63824.1  ex5.py  model_checkpoint.pt  prio.job  slurm-63824.out  slurm-63825.out  slurm-63835.out
src/cpl/: __init__.py  cpl.py
src/cpl.egg-info/: PKG-INFO  SOURCES.txt
